feature | add show event rectangles on video
- Добавлен функционал отображения квадратов событий на видео
- Добавлена сортировка событий при их получении

--- a/src/components/Player/styles.module.css
+++ b/src/components/Player/styles.module.css
@@ -7,3 +7,9 @@
   height: 720px;
   width: 1280px;
 }
+
+.eventRectangle {
+  position: absolute;
+  background-color: #00800073;
+  border: 1px solid #00800073;
+}
